GCD---并行和串行队列

--- a/GCD/GCD/Base.lproj/Main.storyboard
+++ b/GCD/GCD/Base.lproj/Main.storyboard
@@ -17,13 +17,23 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pc0-Md-w8q">
-                                <rect key="frame" x="80" y="45" width="106" height="30"/>
+                                <rect key="frame" x="80" y="160" width="166" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="serial01_Queue">
+                                <state key="normal" title="串行队列serial01_Queue">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="didClickSerialQueue:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ABV-58-WKe"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahW-kp-yfc">
+                                <rect key="frame" x="80" y="198" width="182" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="并行队列conCurrentQueue">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="didClickConCurrentQueue:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="YXb-ol-5FA"/>
                                 </connections>
                             </button>
                         </subviews>
